--- a/css/about.css
+++ b/css/about.css
@@ -177,6 +177,10 @@ html, body {
         height: 380px;
     }
 
+    #mission {
+        height: 700px !important;
+    }
+
 }
 
 
@@ -189,7 +193,7 @@ html, body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 350px;
+    height: 600px;
     position: relative;
 }
 
@@ -480,7 +484,7 @@ html, body {
     <--- -------------------------- -*/
 
     #mission {
-        height: 400px;
+        height: 450px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -740,9 +744,12 @@ html, body {
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
                 justify-content: space-between;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -webkit-box-align: flex-start;
+            -ms-flex-align: flex-start;
+                align-items: flex-start;
+        height: 750px;
+        padding-bottom: 0px;
+        padding-top: 50px;
     }
 
     .experience-content {
@@ -755,6 +762,10 @@ html, body {
     /*-- -------------------------- -->
     <---          MISSION           -->
     <--- -------------------------- -*/
+
+    #mission {
+        height: 450px;
+    }
 
     #mission h2 {
         padding-top: 90px;
