--- a/css/apply.css
+++ b/css/apply.css
@@ -3,41 +3,16 @@
 <--- -------------------------- -*/
 
 #landing-page {
-    min-height: 300px;
-    background:url("../images/Random\ 2.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
-.landing-group {
-    padding: 0;
-    margin: auto;
-    margin-right: auto;
+    background:url("../images/application.jpg");
+    background-size: cover;
+    min-height: 400px;
+    margin-bottom: 40px;
 }
 
 .landing-text h1 {
-    padding-top: 0;
-    margin: 40px auto;
-    font-size: 30px;
+    padding: 0 0 0 20px ;
     border-left: 5px solid var(--primary);
-    text-align: right;
-    box-sizing: border-box;
-    width: 280px;
 }
 
 .clippy-desktop {
@@ -47,6 +22,41 @@
     position: absolute;
     bottom: -5px;
     clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+} 
+
+/*-- -------------------------- -->
+<---         CREDIT APP         -->
+<--- -------------------------- -*/
+
+#credit-app-google-doc-preview {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.clippy-sales {
+    bottom: -1px;
+}
+
+iframe {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.app-list {
+    width: auto;
+    padding-top: 20px;
+}
+
+.app-list li {
+    padding-right: 16px;
+    padding-bottom: 20px;
+    font-size: 1em;
+}
+
+.app-button {
+    margin: 50px auto;
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -54,6 +64,20 @@
     /*-- -------------------------- -->
     <---          LANDING           -->
     <--- -------------------------- -*/
+
+    html, body {
+        overflow-x: hidden;
+    }
+
+    #landing-page {
+        height: 400px;
+    }
+
+    .credit-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 
     h1:after,
     h1:before {
@@ -66,6 +90,10 @@
         padding: 0 20px;
     }
 
+    .clippy-sales {
+        bottom: -1px;
+    }
+
 }
 
 @media screen and (min-width: 1025px) {
@@ -74,11 +102,19 @@
     <---          LANDING           -->
     <--- -------------------------- -*/
 
+    html, body {
+        overflow-x: hidden;
+    }
+
+    #landing-page {
+        background-attachment: fixed;
+    }
+
     .landing-group {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start ;
         align-items: center;
-        height: 400px;
+        height: 500px;
     }
 
     .landing-text {
@@ -87,8 +123,40 @@
 
     .landing-text h1 {
         font-size: 55px;
-        width: 550px;
+        width: 750px;
         padding: 0 20px;
+    }
+
+    /*-- -------------------------- -->
+    <---         CREDIT APP         -->
+    <--- -------------------------- -*/
+
+    #credit-app-google-doc-preview {
+        position: relative;
+    }
+
+    .credit-container {
+        margin-top: 50px;
+        width: 800px;
+    }
+
+    .iframe {
+        height: auto;
+    }
+
+    iframe {
+        margin: 150px auto;
+        width: 100%;
+        height: 800px;
+    }
+
+    .app-button {
+        margin-bottom: 0;
+    }
+
+    .clippy-sales {
+        width: 100%;
+        position: absolute;
     }
 
 }
