--- a/css/contact.css
+++ b/css/contact.css
@@ -556,45 +556,42 @@ form p{
     <---          LANDING           -->
     <--- -------------------------- -*/
 
-    #landing {
+    #landing-page {
         position: relative;
-    }
-
-    .landing-group {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        height: 600px;
+        background:url("../images/Random\ 2.jpg");
+        background-size: cover;
+        height: 750px;
     }
 
     .landing-text {
-        margin-top: 25px;
-        text-align: left;
+        padding-left: 0;
+        margin-left: 0;
     }
-
+    
     .landing-text h1 {
-        font-size: 55px;
-        width: 550px;
-        padding: 0 20px;
-        margin: 0;
+        padding: 0 0 0 20px ;
+        border-left: 5px solid var(--primary);
+        font-size: 59px;
+        text-align: left;
+        width: auto;
     }
 
+    .landing-text h2 {
+        font-size: 20px;
+        width: 700px;
+    }
+    
     #landing-page p {
-        display: block;
-        color: #AAA;
-        opacity: .1;
-        font-size: 400px;
+        display: none;
         position: absolute;
-        bottom: -150px;
-        margin: 0;
-        text-transform: uppercase;
+        width: 100%;
+        bottom: 8px;
+        font-size: 5em;
+        color: #4c4c4c;
+        opacity: .9;
         font-weight: 900;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
     }
 
     /*-- -------------------------- -->
@@ -889,6 +886,7 @@ form p{
     .contact-group h2 {
         margin-bottom: 0;
         font-size: 33px;
+        text-align: center;
     }
 
     .contact-group button {
