added aria labels and alt tags to images and fixed all navigation and button links so they all work

--- a/css/about.css
+++ b/css/about.css
@@ -770,6 +770,7 @@ html, body {
     #mission h2 {
         padding-top: 90px;
         padding-bottom: 10px;
+        font-size: 30px;
     }
 
     #mission h2,
