--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 /*-- -------------------------- -->
 <---           LANDING          -->
 <--- -------------------------- -*/
@@ -36,7 +38,8 @@
     font-size: 30px;
     border-left: 5px solid var(--primary);
     text-align: right;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 280px;
 }
 
@@ -46,7 +49,8 @@
     width: 100%;
     position: absolute;
     bottom: -5px;
-    clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+    -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+            clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -75,9 +79,15 @@
     <--- -------------------------- -*/
 
     .landing-group {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         height: 400px;
     }
 
