--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 
 /* 
                                 Core Styles 
@@ -494,7 +496,7 @@ nav img {
 }
 
 .services-li.drop {
-    height: 260px;\
+    height: 260px;
 }
 
 .service-drop-link.drop {
@@ -1567,4 +1569,3 @@ footer {
         display: inline-block;
     }
 }
-
