--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 
 
 
@@ -928,9 +930,16 @@ i.fas.fa-chevron-right {
 #sales {
     background: #1a1a1a;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .sales-topper h2 {
@@ -1238,9 +1247,15 @@ i.fas.fa-chevron-right {
     */
 
     .future-icons {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         max-width: 450px;
         margin: auto;
     }
@@ -1258,15 +1273,25 @@ i.fas.fa-chevron-right {
     }
 
     .partner-showcase-content {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
     }
 
     .partner-showcase-content h3 {
         width: 100%;
-        align-content: left;
+        -ms-flex-line-pack: left;
+            align-content: left;
         font-size: 22px;
     }
 
@@ -2085,7 +2110,8 @@ i.fas.fa-chevron-right {
             -ms-flex-align: center;
                 align-items: center;
         height: auto;
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         max-width: 400px;
         position: absolute;
         top: 0;
