--- a/css/jobs.css
+++ b/css/jobs.css
@@ -1,46 +1,22 @@
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
 
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
+
 /*-- -------------------------- -->
 <---           LANDING          -->
 <--- -------------------------- -*/
 
 #landing-page {
-    min-height: 300px;
-    background:url("../images/Random\ 2.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
     position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
-.landing-group {
-    padding: 0;
-    margin: auto;
-    margin-right: auto;
+    background:url("../images/application.jpg");
+    background-size: cover;
+    min-height: 400px;
+    margin-bottom: 40px;
 }
 
 .landing-text h1 {
-    padding-top: 0;
-    margin: 40px auto;
-    font-size: 30px;
+    padding: 0 0 0 20px ;
     border-left: 5px solid var(--primary);
-    text-align: right;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    width: 280px;
 }
 
 .clippy-desktop {
@@ -51,6 +27,48 @@
     bottom: -5px;
     -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
             clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+} 
+
+/*-- -------------------------- -->
+<---         CREDIT APP         -->
+<--- -------------------------- -*/
+
+#credit-app-google-doc-preview {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+
+.clippy-sales {
+    bottom: -1px;
+}
+
+iframe {
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.app-list {
+    width: auto;
+    padding-top: 20px;
+}
+
+.app-list li {
+    padding-right: 16px;
+    padding-bottom: 20px;
+    font-size: 1em;
+}
+
+.app-button {
+    margin: 50px auto;
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
@@ -58,6 +76,27 @@
     /*-- -------------------------- -->
     <---          LANDING           -->
     <--- -------------------------- -*/
+
+    html, body {
+        overflow-x: hidden;
+    }
+
+    #landing-page {
+        height: 400px;
+    }
+
+    .credit-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+    }
 
     h1:after,
     h1:before {
@@ -70,6 +109,10 @@
         padding: 0 20px;
     }
 
+    .clippy-sales {
+        bottom: -1px;
+    }
+
 }
 
 @media screen and (min-width: 1025px) {
@@ -78,17 +121,25 @@
     <---          LANDING           -->
     <--- -------------------------- -*/
 
+    html, body {
+        overflow-x: hidden;
+    }
+
+    #landing-page {
+        background-attachment: fixed;
+    }
+
     .landing-group {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start ;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
-        height: 400px;
+        height: 500px;
     }
 
     .landing-text {
@@ -97,8 +148,40 @@
 
     .landing-text h1 {
         font-size: 55px;
-        width: 550px;
+        width: 750px;
         padding: 0 20px;
+    }
+
+    /*-- -------------------------- -->
+    <---         CREDIT APP         -->
+    <--- -------------------------- -*/
+
+    #credit-app-google-doc-preview {
+        position: relative;
+    }
+
+    .credit-container {
+        margin-top: 50px;
+        width: 800px;
+    }
+
+    .iframe {
+        height: auto;
+    }
+
+    iframe {
+        margin: 150px auto;
+        width: 100%;
+        height: 800px;
+    }
+
+    .app-button {
+        margin-bottom: 0;
+    }
+
+    .clippy-sales {
+        width: 100%;
+        position: absolute;
     }
 
 }
