--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -7,6 +7,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .container {
@@ -976,6 +977,10 @@ nav img {
     }
 
     /* about sub menu */
+
+    .about-li, .services-li, .contact-li {
+        padding-left: 20px;
+    }
     
     .about-li .icon-drop {
         position: relative;
