chnaged li a pdding to 15px

--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -978,8 +978,8 @@ nav img {
 
     /* about sub menu */
 
-    .about-li a, .services-li a, .contact-li a {
-        padding-left: 20px;
+    #main-navigation li a {
+        padding-left: 15px;
     }
     
     .about-li .icon-drop {
